added get all request
